Updated tips to 4.0.0 tool tipster to solve bugs on iPhone

--- a/components/tip/scss/_secondary.scss
+++ b/components/tip/scss/_secondary.scss
@@ -148,7 +148,7 @@
 }
 
 .tooltipster-update-rotate {
-	animation: tooltipster-rotating 600ms;
+	//animation: tooltipster-rotating 600ms;
 }
 
 /* scale */
